--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "jest --env=jsdom"
   },
   "dependencies": {
+    "@vue/test-utils": "^2.4.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "jsdom": "^22.1.0",
     "vite": "^4.3.9",
     "vitest": "^0.32.4"
   }
