--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "jsdom": "^22.1.0",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "vite": "^4.3.9",
     "vitest": "^0.32.4"
   }
